tests/invalid/import_call_undefined_module_attr/provider.py
def helper() -> int:
    return 42
